--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@cloudflare/workers-types": "^3.2.0",
     "@remix-run/dev": "^1.3.2",
     "@remix-run/eslint-config": "^1.3.2",
+    "@tailwindcss/forms": "^0.5.0",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "eslint": "^8.11.0",
