--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "dependencies": {
     "@remix-run/cloudflare-pages": "^1.3.2",
     "@remix-run/react": "^1.3.2",
+    "@visx/visx": "^2.9.0",
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-number-format": "^4.9.1",
     "remix": "^1.3.2"
   },
   "devDependencies": {
