--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "dev:remix": "remix watch",
     "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public",
     "generate:css": "npx tailwindcss -o ./app/tailwind.css",
-    "postinstall": "remix setup cloudflare-pages",
+    "postinstall": "remix setup cloudflare",
     "start": "cross-env NODE_ENV=production npm run dev:wrangler"
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
     "@remix-run/cloudflare-pages": "^1.3.2",
     "@remix-run/react": "^1.3.2",
     "@visx/visx": "^2.9.0",
