--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "npm run build:css && npm run build:remix",
     "build:css": "npm run generate:css -- --minify",
-    "build:remix": "cross-env NODE_ENV=production remix build",
+    "build:remix": "remix build",
     "dev": "remix build && run-p dev:*",
     "dev:css": "npm run generate:css -- --watch",
     "dev:remix": "remix watch",
@@ -18,19 +18,25 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
-    "@remix-run/cloudflare-pages": "^1.3.2",
-    "@remix-run/react": "^1.3.2",
-    "@visx/visx": "^2.9.0",
+    "@remix-run/cloudflare-pages": "^1.3.4",
+    "@remix-run/react": "^1.3.4",
+    "@visx/event": "^2.6.0",
+    "@visx/responsive": "^2.8.0",
+    "@visx/shape": "^2.4.0",
+    "@visx/group": "^2.1.0",
+    "@visx/grid": "^2.6.0",
+    "@visx/axis": "^2.6.0",
+    "@visx/tooltip": "^2.8.0",
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-number-format": "^4.9.1",
-    "remix": "^1.3.2"
+    "remix": "^1.3.4"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.2.0",
-    "@remix-run/dev": "^1.3.2",
-    "@remix-run/eslint-config": "^1.3.2",
+    "@remix-run/dev": "^1.3.4",
+    "@remix-run/eslint-config": "^1.3.4",
     "@tailwindcss/forms": "^0.5.0",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
