--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "@headlessui/react": "^1.5.0",
     "@remix-run/cloudflare-pages": "^1.3.4",
     "@remix-run/react": "^1.3.4",
-    "@visx/event": "^2.6.0",
-    "@visx/responsive": "^2.8.0",
-    "@visx/shape": "^2.4.0",
-    "@visx/group": "^2.1.0",
-    "@visx/grid": "^2.6.0",
     "@visx/axis": "^2.6.0",
+    "@visx/event": "^2.6.0",
+    "@visx/grid": "^2.6.0",
+    "@visx/group": "^2.1.0",
+    "@visx/responsive": "^2.8.0",
+    "@visx/scale": "^2.2.2",
+    "@visx/shape": "^2.4.0",
     "@visx/tooltip": "^2.8.0",
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
