--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "dev:remix": "remix watch",
     "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public",
     "generate:css": "npx tailwindcss -o ./app/tailwind.css",
-    "postinstall": "remix setup cloudflare",
     "start": "cross-env NODE_ENV=production npm run dev:wrangler"
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
+    "@remix-run/cloudflare": "^1.3.4",
     "@remix-run/cloudflare-pages": "^1.3.4",
     "@remix-run/react": "^1.3.4",
     "@visx/axis": "^2.6.0",
@@ -31,8 +31,7 @@
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-number-format": "^4.9.1",
-    "remix": "^1.3.4"
+    "react-number-format": "^4.9.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.2.0",
