--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-number-format": "^4.9.1"
+    "react-joyride": "^2.4.0",
+    "react-number-format": "^4.9.1",
+    "react-portal": "^4.2.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.2.0",
@@ -40,6 +42,7 @@
     "@tailwindcss/forms": "^0.5.0",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@types/react-portal": "^4.0.4",
     "eslint": "^8.11.0",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.0.23",
