--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "remix build && run-p dev:*",
     "dev:css": "npm run generate:css -- --watch",
     "dev:remix": "remix watch",
-    "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public",
+    "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public --binding IEX_PUBLISHABLE_KEY=\"Tpk_da47c5ad244642228eacea91480e1dc5\" IEX_URL=\"https://sandbox.iexapis.com/stable/\"",
     "generate:css": "npx tailwindcss -o ./app/tailwind.css",
     "start": "cross-env NODE_ENV=production npm run dev:wrangler"
   },
@@ -29,21 +29,22 @@
     "@visx/shape": "^2.4.0",
     "@visx/tooltip": "^2.8.0",
     "cross-env": "^7.0.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-joyride": "^2.4.0",
     "react-number-format": "^4.9.1",
-    "react-portal": "^4.2.2"
+    "react-portal": "^4.2.2",
+    "react-select": "^5.3.2"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.2.0",
+    "@cloudflare/workers-types": "^3.10.0",
     "@remix-run/dev": "^1.3.4",
     "@remix-run/eslint-config": "^1.3.4",
     "@tailwindcss/forms": "^0.5.0",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "@types/react-portal": "^4.0.4",
-    "eslint": "^8.11.0",
+    "eslint": "^8.15.0",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.5",
