--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-joyride": "^2.4.0",
     "react-number-format": "^4.9.1",
     "react-portal": "^4.2.2",
-    "react-select": "^5.3.2"
+    "react-select": "^5.3.2",
+    "use-debounce": "^8.0.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.10.0",
